[project]
name = "dmsapi"
version = "0.1.0"
description = "The backend API implementation for the STAC Data Management Suite"
authors = [{ name = "Nathan Clerkx", email = "nathan.clerkx@deltares.nl" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "fastapi-sso>=0.15.0,<0.16",
    "authlib>=1.3.1,<2",
    "alembic>=1.13.2,<2",
    "sqlmodel>=0.0.21,<0.0.22",
    "psycopg[binary]>=3.2.1,<4",
    "stac-fastapi-opensearch==3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.1,<2",
    "pytest>=8.3.1,<9",
    "pytest-asyncio>=0.23.8,<0.24",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
